--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "prettier": "2.8.8",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
   }
