--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
