--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
