--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@uidotdev/usehooks": "^2.0.1",
     "flatted": "^3.2.7",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^6.10.0",
     "react-scrollable-feed": "^1.3.2",
     "socket.io-client": "^4.7.1"
