--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@uidotdev/usehooks": "^2.0.1",
     "flatted": "^3.2.7",
